--- a/html/mmbase/style/css/mmbase.css
+++ b/html/mmbase/style/css/mmbase.css
@@ -1,7 +1,7 @@
 /*
  CSS for MMBase
  @author Michiel Meeuwissen
- @version $Id: mmbase.css,v 1.6 2004-02-13 10:22:46 gerard Exp $;
+ @version $Id: mmbase.css,v 1.7 2004-07-14 07:07:41 keesj Exp $;
 */
 
 
@@ -131,4 +131,41 @@ a:hover {
 
 .navigate img { 
   border: none;
+}
+/* tabs */
+#tabnav {
+  height: 20px;
+  margin: 0;
+  padding-left: 10px;
+  background: url(/mmbase/style/images/tab_bottom.gif) repeat-x bottom;
+}
+
+#tabnav li {
+                margin: 0;
+                padding: 0;
+                display: inline;
+                list-style-type: none;
+}
+
+#tabnav a:link, #tabnav a:visited {
+                float: left;
+                background: #ddd;
+                font-size: 10px;
+                line-height: 14px;
+                font-weight: bold;
+                padding: 2px 10px 2px 10px;
+                margin-right: 4px;
+                border: 1px solid #000000;
+                text-decoration: none;
+                color: #666;
+        }
+
+#tabnav a:link.active, #tabnav a:visited.active {
+                border-bottom: 1px solid #f3f3f3;
+                background: #f3f3f3;
+                color: #000000;
+}
+
+#tabnav a:hover {
+                background: #f3f3f3;
 }
