--- a/mmweb/css/mmbase-dev.css
+++ b/mmweb/css/mmbase-dev.css
@@ -1,342 +1,119 @@
-body
+/* Stylesheet for news pages in dev portal */
+.newsinhoud
 {
-	font-family: "Lucida Grande", Verdana, Arial, sans-serif;
-	font-size: 10px;
-	background-color: white;
-	display: float;
-	margin: 0px;
-	padding: 0px;
+	width: 540px;
+	padding: 10px 40px 10px 0px;
 }
 
-td
+.newstitle
 {
-	font-family: "Lucida Grande", Verdana, Arial, sans-serif;
-	font-size: 10px;
-}
-
-p
-{
-	font-size: 11px;
-	text-align: left;
-	margin: 0px;
-	padding: 15px 0px 0px 0px;
-}
-
-ul
-{
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
-
-dt
-{
-	margin-left: 20px;
-	font-weight: bold;
-	color: #5D5D5D;
-	font-size: 14px;
-	text-decoration: underline;
-}
-
-dd
-{
-	margin-left: 20px;
-	margin-bottom: 5px;
-	font-size: 12px;
-}
-
-blockquote
-{
-	font-size: 12px;
-	text-align: left;
-	background: #EFEFEF;
-}
-
-ul
-{
-	font-size: 11px;
-	text-align: left;
-}
-
-ol
-{
-	font-size: 11px;
-	text-align: left;
-}
-
-h1
-{
-	font-size: 24px;
-	font-weight: bold;
-	color: #003333;
-	text-align: left;
-	padding-botom: 5px;
-}
-
-h2
-{
+	font-family: "Lucida Grande", Geneva, Helvetica, Arial, sans-serif;
 	font-size: 18px;
 	font-weight: bold;
-	color: #003333;
-	text-align: left;
+	padding: 5px 0px 4px 0px;
 }
 
-h3
+.newssubtitle
 {
-	font-size: 16px;
-	font-weight: bold;
-	color: #003333;
-	text-align: left;
-}
-
-h4
-{
-	font-size: 14px;
-	font-weight: bold;
-	color: #003333;
-	text-align: left;
-}
-
-h5
-{
+	padding: 0px 5px 5px 0px;
+	font-family: "Lucida Grande", Geneva, Helvetica, Arial, sans-serif;
 	font-size: 12px;
 	font-weight: bold;
-	color: #003333;
-	text-align: left;
+	color: #333;
 }
 
-h6
+.newssubL
 {
+	position: relative;
+	float: left;
+	display: inline;
+	margin: 0;
 	font-size: 10px;
-	font-weight: bold;
-	color: #003333;
-	text-align: left;
 }
 
-h1, h2, h3, h4, h5, h6 { margin-bottom: 5px; }
-
-b
+.newssubR
 {
-	font-weight: bold;
-	color: #003333;
-}
-
-strong
-{
-	font-weight: bold;
-	color: #CCEB6F;
-}
-
-.layout { width: 100%; }
-
-.layout, .layout th, 	.layout td
-{
-	border: 0px;
-	padding: 0px;
-	margin: 0px;
-	background-color: white;
-	text-align: left;
-	vertical-align: top;
-	font-size: 11px;
-}
-
-.list
-{
-	border-left: 1px solid #797868;
-	border-top:1px solid #797868;
-	padding: 0px;
-}
-
-.list tr th
-{
-	margin: 0px;
-	padding: 3px;
-	border-right: 1px solid #797868;
-	border-bottom:1px solid #797868;
-	font-size: 12px;
-	background-color: #CCEB6F;
-	color: #3B3B3B;
-}
-
-.list td
-{
-	background-color: #f7faef;
-	font-size: 11px;
-	color: black;
-	border-right: 1px solid #797868;
-	border-bottom:1px solid #797868;
-	padding-left: 4px;
-	padding-top:	2px;
-	padding-bottom:	2px;
-}
-
-.list .listsearch td
-{
-	background-color: #E7EBDE;
-	border-right: 1px solid #797868;
-	border-bottom:1px solid #797868;
-	padding: 3px;
-}
-
-.list tr .listpaging
-{
-	background-color: #CCEB6F;
-	padding: 3px;
-}
-
-.relationcontainer
-{
-	margin:		4px;
-	margin-top: 	10px;
-	width: 		200px;
-	border: 	1px solid #797868;
-}
-
-.relationcontainer th
-{
-	background-color: #CCEB6F;
-	border: 0px;
-	padding: 3px;
-	padding-left: 5px;
-	padding-right: 5px;
-	margin: 0px;
-}
-
-.relationcontainer td
-{
-	border: 0px;
-	border-top: 1px solid #D8D8D8;
-	padding: 3px;
-	margin-left: 5px;
-	padding-right: 5px;
-	margin: 0px;
-}
-
-.subnav { height: 28px; }
-
-.subnav td
-{
-	border: 1px solid white;
-	background-color: #E7EBDE;
-	text-align: center;
-	padding-top: 5px;
-}
-
-.subnav td a
-{
+	position: relative;
+	float: right;
+	display: inline;
+	margin: 0;
 	font-size: 10px;
-	color: black;
-	font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
 }
 
-.subnav  td a:link { color: black; }
-.subnav td a:visited { color: black; }
-.subnav td a:hover { color: #797868; }
-
-.subnav tr .selected
+.newsintro
 {
-	background-color: #CCEB6F;
-	color: black;
-	font-size: 11px;
-	font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
+	padding: 10px 0px 10px 0px;
+	font-weight: bold;
+	clear: both;
 }
 
-/*
-	breadcrum and links
-*/
-
-
-.breadcrumbar
+.newsbody
 {
-	font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
-	font-size: 10px;
-	background: #CCEB6F;
+	line-height: 130%;
+	padding: 0pt 5pt 0pt 0pt;
+}
+
+.newsurls
+{
+	position: relative;
+	float: right;
+	margin: 0px 10px 5px 10px;
+}
+
+.newsnextprev
+{
+	margin: 5px 0px 0px 0px;
+	border-color: #797868;
+	border-width: 1px;
+	border-style: solid;
 	width: 100%;
-	height: 18px;
-	border-bottom: black;
-	border-width: 0 0 1px 0;
-	border-style: none none solid none;
 }
-.breadcrumbar td
+.newsnextprev td
 {
-	font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
-	font-size: 10px;
-	background: #CCEB6F;
+	background-color: #CCEB6F;
+	padding: 1px 20px 1px 20px;
+	text-align: center;
 	vertical-align: middle;
-	padding: 3px 0px 3px 5px;
-}
-
-.breadcrumbar td a { 
-	color: black;	
-}
-.breadcrumbar td a:hover { 
-	color: #797868;	
-}
-
-
-a:link
-{
-	color: #7A9B15;
-	text-decoration: none;
-	font-weight: bold;
-}
-
-a:visited
-{
-	color: #7A9B15;
-	text-decoration: none;
-	font-weight: bold;
-}
-
-a:hover
-{
-	color: #797868;
-	text-decoration: none;
-}
-
-/*
-	/ breadcrum and links
-*/
-
-.content
-{
-	border-color: #333;
-	border-width: 0px 1px 1px 0px;
+	border-color: #FFFFFF;
+	border-width: 1px;
 	border-style: solid;
 }
 
-.intro
-{
-	font-size: 11px;
-	font-weight: bold;
+/* tabs */
+#tabnav {
+  height: 20px;
+  margin: 0;
+  padding-left: 10px;
+  background: url(/../images/tab_bottom.gif) repeat-x bottom;
 }
 
-.imgtitle
-{
-	font-size: 8pt;
-	font-weight: normal;
+#tabnav li {
+                margin: 0;
+                padding: 0;
+                display: inline;
+                list-style-type: none;
 }
 
-/*
-	Form items etc
-*/
+#tabnav a:link, #tabnav a:visited {
+                float: left;
+                background: #ddd;
+                font-size: 10px;
+                line-height: 14px;
+                font-weight: bold;
+                padding: 2px 10px 2px 10px;
+                margin-right: 4px;
+                border: 1px solid #000000;
+                text-decoration: none;
+                color: #666;
+        }
 
-input
-{
-	text-align: left;
-	font-family: "Lucide Grande", Arial, sans-serif;
-	font-size: 11px;
-	background-color: #D9DDDE;
-	padding-left: 	2px;
-	padding-right:	2px;
-	margin:		2px;
+#tabnav a:link.active, #tabnav a:visited.active {
+                border-bottom: 1px solid #f3f3f3;
+                background: #f3f3f3;
+                color: #000000;
 }
 
-select
-{
-	font-family: "Lucide Grande", Arial, sans-serif;
-	font-size: 11px;
-	background-color: #D9DDDE;
-	margin:		2px;
+#tabnav a:hover {
+                background: #f3f3f3;
 }
 
-textarea { background-color: #D9DDDE; }
