Adding header,footer and bodypart class, which we now use for mmbob
git-svn-id: https://scm.mmbase.org/mmbase/trunk@11784 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/thememanager/templates/jsp/thememanager/css/MMBaseTools/default.css
+++ b/contributions/thememanager/templates/jsp/thememanager/css/MMBaseTools/default.css
@@ -126,6 +126,32 @@ strong
 	color: #CCEB6F;
 }
 
+/* Header */
+.header
+{
+        visibility: visible;
+        background: #FFFFFF;
+}
+                                                                                                                          
+/*
+   The "bodypart" right under the header should be positioned
+   right under the header eg by using "margin-top"
+*/
+.bodypart
+{
+        /*margin-top: 50px;*/
+        visibility: visible;
+        background: #FFFFFF;
+}
+                                                                                                                          
+/* Footer */
+.footer
+{
+        visibility: visible;
+        background: #FFFFFF;
+}
+
+
 .layout { width: 100%; }
 
 .layout, .layout th, 	.layout td
