--- a/contributions/didactor2/src/core/templates/css/base.css
+++ b/contributions/didactor2/src/core/templates/css/base.css
@@ -591,7 +591,7 @@ a.treeNavigation:hover {
 	font-weight: normal;
 	color: #000000;
 	overflow: auto;
-	top: 2em;
+	top: 5.2em;
 	height: 100%;
 	left: 0em;
 	right: 0em;
@@ -629,7 +629,7 @@ textarea {
 	font-size: 1.1em;
 	font-weight: normal;
 	color: #000000;
-	background-color: #EAEAEA;
+	background-color: white;
 	padding: 0em 0em 0em 0em;
 	width: 24em;
 	height: 8em;
@@ -786,3 +786,11 @@ a.forumlist:active {
 .pagetable tr td {
     vertical-align: top;
 }
+
+.readonlytext {
+    background-color: white;
+    color: black;
+    width: 95%;
+    padding: 0.5em 1em 0.5em 1em;
+}
+
