--- a/speeltuin/gomez/zagyg/edit/tasks/meta/templates/template.xml
+++ b/speeltuin/gomez/zagyg/edit/tasks/meta/templates/template.xml
@@ -19,23 +19,31 @@
   <lists>
       <optionlist name="posities">
         <option id="0">Page template</option>
-        <option id="3">Page template (variant:submenu)</option>
-        <option id="4">Page template (variant:popup)</option>
-        <option id="1">Container</option>
-        <option id="2">Container (variant:sidebar)</option>
+        <option id="1">Page template (variant:submenu)</option>
+        <option id="2">Page template (variant:popup)</option>
+        <option id="3">Container</option>
+        <option id="4">Container (variant:sidebar)</option>
         <option id="5">Placeholder</option>
         <option id="6">Administration</option>
       </optionlist>
+      <optionlist name="sizes">
+        <option id="-1">Objects related to this category, unordered</option>
+        <option id="2">Objects related to this category, ordered</option>
+        <option id="1">Single Object related to this category</option>
+        <option id="0">Unrelated objects</option>
+      </optionlist>
   </lists>
 
-  <form-schema extends="tasks/templates/schema.xml" id="basics" >
+  <form-schema extends="tasks/meta/templates/schema.xml" id="basics" >
 
     <list role="editor" destination="typedef" ordertype="number" orderby="field[@name='pos']">
       <title xml:lang="en">Editors</title>
       <title xml:lang="nl">Edittaken</title>
       <item>
         <field ftype="function" name="gui()" />
-        <field fdatapath="field[@name='size']" />
+        <field fdatapath="field[@name='size']" ftype="enum" dtrequired="true" >
+          <optionlist select="sizes" />
+        </field>
         <field fdatapath="field[@name='name']" />
         <field fdatapath="field[@name='wizard']" />
         <field fdatapath="field[@name='nodepath']" />
