--- a/mmweb/css/mmbase-dev.css
+++ b/mmweb/css/mmbase-dev.css
@@ -68,6 +68,7 @@
 	border-style: solid;
 	width: 100%;
 }
+
 .newsnextprev td
 {
 	background-color: #CCEB6F;
@@ -80,40 +81,41 @@
 }
 
 /* tabs */
-#tabnav {
-  height: 20px;
-  margin: 0;
-  padding-left: 10px;
-  background: url(/../images/tab_bottom.gif) repeat-x bottom;
+#tabnav
+{
+	height: 20px;
+	margin: 0;
+	padding-left: 10px;
+	background: url(/../images/tab_bottom.gif) repeat-x bottom;
 }
 
-#tabnav li {
-                margin: 0;
-                padding: 0;
-                display: inline;
-                list-style-type: none;
+#tabnav li
+{
+	margin: 0;
+	padding: 0;
+	display: inline;
+	list-style-type: none;
 }
 
-#tabnav a:link, #tabnav a:visited {
-                float: left;
-                background: #ddd;
-                font-size: 10px;
-                line-height: 14px;
-                font-weight: bold;
-                padding: 2px 10px 2px 10px;
-                margin-right: 4px;
-                border: 1px solid #000000;
-                text-decoration: none;
-                color: #666;
-        }
-
-#tabnav a:link.active, #tabnav a:visited.active {
-                border-bottom: 1px solid #f3f3f3;
-                background: #f3f3f3;
-                color: #000000;
+#tabnav a:link, #tabnav a:visited
+{
+	float: left;
+	background: #ddd;
+	font-size: 10px;
+	line-height: 14px;
+	font-weight: bold;
+	padding: 2px 10px 2px 10px;
+	margin-right: 4px;
+	border: 1px solid #000000;
+	text-decoration: none;
+	color: #666;
 }
 
-#tabnav a:hover {
-                background: #f3f3f3;
+#tabnav a:link.active, #tabnav a:visited.active
+{
+	border-bottom: 1px solid #f3f3f3;
+	background: #f3f3f3;
+	color: #000000;
 }
 
+#tabnav a:hover { background: #f3f3f3; }
