--- a/mmweb/css/mmbase.css
+++ b/mmweb/css/mmbase.css
@@ -19,7 +19,7 @@ p
 	font-size: 11px;
 	text-align: left;
 	margin: 0px;
-	padding: 15px 0px 0px 0px;
+	padding: 10px 0 0 0;
 }
 
 ul
@@ -112,7 +112,7 @@ h6
 	text-align: left;
 }
 
-h1, h2, h3, h4, h5, h6 { margin-bottom: 5px; }
+h1, h2, h3, h4, h5, h6 { margin: 10px 0 0 0; }
 
 b
 {
@@ -142,7 +142,7 @@ strong
 .list
 {
 	border-left: 1px solid #797868;
-	border-top:1px solid #797868;
+	border-top: 1px solid #797868;
 	padding: 0px;
 }
 
@@ -151,7 +151,7 @@ strong
 	margin: 0px;
 	padding: 3px;
 	border-right: 1px solid #797868;
-	border-bottom:1px solid #797868;
+	border-bottom: 1px solid #797868;
 	font-size: 12px;
 	background-color: #CCEB6F;
 	color: #3B3B3B;
@@ -163,17 +163,17 @@ strong
 	font-size: 11px;
 	color: black;
 	border-right: 1px solid #797868;
-	border-bottom:1px solid #797868;
+	border-bottom: 1px solid #797868;
 	padding-left: 4px;
-	padding-top:	2px;
-	padding-bottom:	2px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 }
 
 .list .listsearch td
 {
 	background-color: #E7EBDE;
 	border-right: 1px solid #797868;
-	border-bottom:1px solid #797868;
+	border-bottom: 1px solid #797868;
 	padding: 3px;
 }
 
@@ -185,10 +185,10 @@ strong
 
 .relationcontainer
 {
-	margin:		4px;
-	margin-top: 	10px;
-	width: 		200px;
-	border: 	1px solid #797868;
+	margin: 4px;
+	margin-top: 10px;
+	width: 200px;
+	border: 1px solid #797868;
 }
 
 .relationcontainer th
@@ -244,7 +244,6 @@ strong
 	breadcrum and links
 */
 
-
 .breadcrumbar
 {
 	font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
@@ -256,6 +255,7 @@ strong
 	border-width: 0 0 1px 0;
 	border-style: none none solid none;
 }
+
 .breadcrumbar td
 {
 	font-family: "Lucida Grande", Arial, Helvetica, sans-serif;
@@ -265,13 +265,8 @@ strong
 	padding: 3px 0px 3px 5px;
 }
 
-.breadcrumbar td a { 
-	color: black;	
-}
-.breadcrumbar td a:hover { 
-	color: #797868;	
-}
-
+.breadcrumbar td a { color: black; }
+.breadcrumbar td a:hover { color: #797868; }
 
 a:link
 {
@@ -320,15 +315,26 @@ a:hover
 	Form items etc
 */
 
+input
+{
+	text-align: left;
+	font-family: "Lucide Grande", Arial, sans-serif;
+	font-size: 11px;
+	background-color: #D9DDDE;
+	padding-left: 2px;
+	padding-right: 2px;
+	margin: 2px;
+}
+
 input.mmbase
 {
 	text-align: left;
 	font-family: "Lucide Grande", Arial, sans-serif;
 	font-size: 11px;
 	background-color: #D9DDDE;
-	padding-left: 	2px;
-	padding-right:	2px;
-	margin:		2px;
+	padding-left: 2px;
+	padding-right: 2px;
+	margin: 2px;
 }
 
 select
@@ -336,7 +342,129 @@ select
 	font-family: "Lucide Grande", Arial, sans-serif;
 	font-size: 11px;
 	background-color: #D9DDDE;
-	margin:		2px;
+	margin: 2px;
 }
 
 textarea { background-color: #D9DDDE; }
+
+/* Stylesheet for news pages in dev portal */
+.newsinhoud
+{
+	width: 540px;
+	padding: 10px 40px 10px 0px;
+}
+
+.newstitle
+{
+	font-family: "Lucida Grande", Geneva, Helvetica, Arial, sans-serif;
+	font-size: 18px;
+	font-weight: bold;
+	padding: 5px 0px 4px 0px;
+}
+
+.newssubtitle
+{
+	padding: 0px 5px 5px 0px;
+	font-family: "Lucida Grande", Geneva, Helvetica, Arial, sans-serif;
+	font-size: 12px;
+	font-weight: bold;
+	color: #333;
+}
+
+.newssubL
+{
+	position: relative;
+	float: left;
+	display: inline;
+	margin: 0;
+	font-size: 10px;
+}
+
+.newssubR
+{
+	position: relative;
+	float: right;
+	display: inline;
+	margin: 0;
+	font-size: 10px;
+}
+
+.newsintro
+{
+	padding: 10px 0px 10px 0px;
+	font-weight: bold;
+	clear: both;
+}
+
+.newsbody
+{
+	line-height: 130%;
+	padding: 0pt 5pt 0pt 0pt;
+}
+
+.newsurls
+{
+	position: relative;
+	float: right;
+	margin: 0px 10px 5px 10px;
+}
+
+.newsnextprev
+{
+	margin: 5px 0px 0px 0px;
+	border-color: #797868;
+	border-width: 1px;
+	border-style: solid;
+	width: 100%;
+}
+
+.newsnextprev td
+{
+	background-color: #CCEB6F;
+	padding: 1px 20px 1px 20px;
+	text-align: center;
+	vertical-align: middle;
+	border-color: #FFFFFF;
+	border-width: 1px;
+	border-style: solid;
+}
+
+/* tabs */
+#tabnav
+{
+	height: 20px;
+	margin: 0;
+	padding-left: 10px;
+	background: url(/../images/tab_bottom.gif) repeat-x bottom;
+}
+
+#tabnav li
+{
+	margin: 0;
+	padding: 0;
+	display: inline;
+	list-style-type: none;
+}
+
+#tabnav a:link, #tabnav a:visited
+{
+	float: left;
+	background: #ddd;
+	font-size: 10px;
+	line-height: 14px;
+	font-weight: bold;
+	padding: 2px 10px 2px 10px;
+	margin-right: 4px;
+	border: 1px solid #000000;
+	text-decoration: none;
+	color: #666;
+}
+
+#tabnav a:link.active, #tabnav a:visited.active
+{
+	border-bottom: 1px solid #f3f3f3;
+	background: #f3f3f3;
+	color: #000000;
+}
+
+#tabnav a:hover { background: #f3f3f3; }
