images edited - layout feedback fixes
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12323 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/agenda/templates/agenda/css/agenda.css
+++ b/contributions/didactor2/src/agenda/templates/agenda/css/agenda.css
@@ -43,12 +43,16 @@
 .calDayNotThisMonthHighlight {
   background-color: #bb0000;
   color: #444444;
+   cursor: pointer;
+
 }
 
 /* Days that are highlighed, and they fall inside the current month */
 .calDayThisMonthHighlight {
   background-color: #ff0000;
   color: #000000;
+   cursor: pointer;
+
 }
 
 /* Today */
