andre: added a style for a general content div for templates with less tables like iframe.jsp
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12407 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/mmweb/css/mmbase.css
+++ b/mmweb/css/mmbase.css
@@ -123,17 +123,20 @@ b
 strong
 {
 	font-weight: bold;
-	color: #CCEB6F;
+	color: #003333;
 }
+
+#pagecontent { margin: 0 0 20px 150px; }
 
 .layout { width: 100%; }
 
 .layout, .layout th, .layout td
 {
 	border: 0px;
+/*
 	padding: 0px;
 	margin: 0px;
-	background-color: white;
+*/	background-color: white;
 	text-align: left;
 	vertical-align: top;
 	font-size: 11px;
