all pages now have a white background. better feedback on tests
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12677 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/templates/css/base.css
+++ b/contributions/didactor2/src/core/templates/css/base.css
@@ -570,7 +570,7 @@ a.treeNavigation:hover {
 	position: absolute; 
 	z-index: 6;
 	padding: 0.5em 0em 0em 0em;
-	background-color: #E7E7E7;
+	background-color: #ffffff;
 	border-left: 1px solid #888888 }	
 
 .contentBody {
@@ -584,7 +584,7 @@ a.treeNavigation:hover {
 	position: absolute; 
 	z-index: 4;
 	padding: 1em 1em 1em 1em;
-	background-color: #E7E7E7;
+	background-color: #ffffff;
 	border-left: 1px solid #888888 }
 	
 .contentBodywit {
