*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12728 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/templates/css/base.css
+++ b/contributions/didactor2/src/core/templates/css/base.css
@@ -576,7 +576,7 @@ a.treeNavigation:hover {
 .contentBody {
 	font-weight: normal;
 	color: #000000;
-	overflow: auto;
+	overflow: visible;
 	top: 5.2em;
 	height: 100%;
 	left: 0em;
@@ -590,7 +590,7 @@ a.treeNavigation:hover {
 .contentBodywit {
 	font-weight: normal;
 	color: #000000;
-	overflow: auto;
+	overflow: visible;
 	top: 5.2em;
 	height: 100%;
 	left: 0em;
