*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@12735 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/contributions/didactor2/src/core/templates/css/base.css
+++ b/contributions/didactor2/src/core/templates/css/base.css
@@ -234,7 +234,7 @@ input.search {
 	width: 1px;
 	display: inline;
 	white-space: nowrap;
-	margin: 0px;
+	margin: 0em 1em 0em 1em;
 	padding: 0em 0.8em 0.1em 1em }
 
 .spacer {
