--- a/mmweb/css/mmmbase.css
+++ b/mmweb/css/mmmbase.css
@@ -1,7 +1,7 @@
 /*
 note: replaced 
-10px = 0.85em 
-11px = 0.9em
+10px = 0.8em 
+11px = 0.85em
 12px = 1em
 */
 
@@ -16,19 +16,15 @@ body
 
 p
 {
-	font-size: 0.9em;
+	font-size: 0.85em;
 	text-align: left;
 	margin: 0px;
-	padding: 0 0 1em 0;
+	padding: 2px 0 1em 0;
 }
 
-ul
-{
-	margin-top: 10px;
-	margin-bottom: 10px;
-}
 
-td { font-size: 0.8em; }
+td { font-size: 0.85em; }
+td p { font-size: 1.0em; }
 
 dt
 {
@@ -48,22 +44,24 @@ dd
 
 blockquote
 {
-	font-size: 0.9em;
+	font-size: 0.85em;
 	text-align: left;
 	background: #EFEFEF;
 }
 
-ul
-{
-	font-size: 0.9em;
-	text-align: left;
-}
-
 ol
 {
-	font-size: 0.9em;
 	text-align: left;
+	font-size: 0.9em;
 }
+
+ul
+{
+	text-align: left;
+	margin: 10px 0 10px 0;
+	font-size: 0.9em;
+}
+
 
 h1
 {
@@ -108,7 +106,7 @@ h5
 
 h6
 {
-	font-size: 0.9em;
+	font-size: 0.85em;
 	font-weight: bold;
 	color: #003333;
 	text-align: left;
@@ -129,11 +127,45 @@ strong
 }
 
 #pagecontent { margin: 0 0 20px 150px; }
-.relatedpages { margin: 6px 0 6px 150px; }
+
+/* class fo javascript:window.open() stuff */
+#windowopen
+{
+	margin: 12px 7% 12px 7%;
+	padding: 4px;
+	border-color: #CCC;
+	border-width: 1px;
+	border-style: solid;
+}
+
+#windowopen .close {
+ font-size: 1em;
+ float: right;
+}
+
+.relatedpages
+{
+	margin: 4px 0 10px 150px;
+	font-weight: normal;
+	font-size: 0.8em;
+	border-color: #999;
+	border-width: 0 0 1px 0;
+	border-style: none none solid none;
+	padding: 0 0 4px 0;
+}
+
+.relatedpages a { font-weight: lighter; }
+
+.relatedpages strong a
+{
+	font-weight: bold;
+	text-decoration: underline;
+	text-transform: inherit;
+}
 
 #footer
 {
-	font-size: 0.85em;
+	font-size: 0.8em;
 	padding: 4px 0 20px 0;
 	margin: 40px 0 0 0;
 	border-color: #033;
@@ -204,12 +236,13 @@ strong
 .relationcontainer
 {
 	margin: 4px 4px 4px 0;
-	width: 200px;
+	width: 240px;
 	border: 1px solid #797868;
 }
 
 .relationcontainer th
 {
+	font-size: 1em;
 	background-color: #CCEB6F;
 	border: 0px;
 	padding: 3px 4px 3px 4px;
@@ -218,6 +251,7 @@ strong
 
 .relationcontainer td
 {
+	font-size: 1em;
 	border: 0px;
 	border-top: 1px solid #D8D8D8;
 	padding: 0 4px 3px 4px;
@@ -318,7 +352,6 @@ a:hover
 
 .intro
 {
-	font-size: 0.9em;
 	font-weight: bold;
 }
 
@@ -482,7 +515,7 @@ textarea
 {
 	float: left;
 	background: #ddd;
-	font-size: 0.9em;
+	font-size: 0.85em;
 	line-height: 14px;
 	font-weight: bold;
 	padding: 2px 10px 2px 10px;
@@ -502,7 +535,10 @@ textarea
 #tabnav a:hover { background: #f3f3f3; }
 
 /* search */
-#searchhome { padding: 10px 0 0 0; }
+#searchhome
+{
+	margin: 42px 0 0 0;
+}
 
 #searchform
 {
@@ -533,7 +569,7 @@ textarea
 {
 	text-decoration: none;
 	text-align: left;
-	margin: 0 0 1em 0;
+	margin: 0 0 0.85em 0;
 	padding: 0;
 }
 
