andre: Additions to stylesheets to introduce new header.
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13057 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/mmweb/css/dev.css
+++ b/mmweb/css/dev.css
@@ -22,3 +22,14 @@
 	vertical-align: middle;
 	padding: 3px 0px 3px 5px;
 }
+
+/* new head */
+#top { background-color: #EBC; }
+
+.tdheader
+{
+	background-image: url(../media/repeat_dev.jpg);
+	background-repeat: repeat-x;
+	background-color: #CCC;
+	height: 55px;
+}
