--- a/mmweb/css/foundation.css
+++ b/mmweb/css/foundation.css
@@ -22,3 +22,14 @@
 	vertical-align: middle;
 	padding: 3px 0px 3px 5px;
 }
+
+/* new head */
+#top { background-color: #CBE; }
+
+.tdheader
+{
+	background-image: url(../media/repeat_found.gif);
+	background-repeat: repeat-x;
+	background-color: #330;
+	height: 55px;
+}
